# Windhover

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  UPSTREAM.md  flake.nix  kestrel  windhover
app/: index.html  package-lock.json  package.json  vite.config.ts
c/: .gitignore  Makefile  backend_cuda.h  backend_metal.h  backend_metal.mm  build_cuda.bat  coli  decode_batch.h  doctor.py  download_fp8.py  glm.c  olmoe.c  openai_server.py  resource_plan.py  setup.sh  tier.h  uring.h  warmup.ps1
desktop/: README.md
desktop/src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json  tauri.windows.conf.json
desktop/src-tauri/binaries/: .gitignore  README.md
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: lib.rs  main.rs
desktop/src-tauri/windows/: hooks.nsh
docs/: DOWNLOAD.md  ENVIRONMENT.md  SETTINGS.md  bench_loop_status.json  bench_phase1_vs_colibri.json  dense_qwen_bench.json  dense_qwen_bench_linux.json  full_bench.json  full_bench_linux.json  grammar-draft.md  laptop_limit_bench.json  laptop_soak_bench.json  phi4_ab_bench.json  phi4_detail_bench.json  phi4_engine_acc.json  phi4_simple_bench.json  qwen7b_bench.json  real_model_bench.json  windhover_bench.json  windhover_bench_linux.json  windhover_gates.json
engine/: Makefile  README.md  ref_glm.json
manifest/: budget_plan.schema.json
packaging/: CHECKLIST.md  build_sidecar.ps1  build_sidecar.sh  pyi_rth_windhover_utf8.py  server_entry.py  windhover-server.spec
site/: README.md  index.html
tools/: agent_workspace.py  (+18 more)
(+62 files in other folders)
