[package]
name = "kestrel-desktop"
version = "0.1.0"
description = "Kestrel — native macOS app for local MoE inference"
authors = ["Vexilo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kestrel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = ["macos-private-api"] }
url = "2"
