[package]
name = "kestrel-desktop"
version = "0.3.0"
description = "Windhover — native desktop app for local LLM inference"
authors = ["Vexilo"]
edition = "2021"
rust-version = "1.77"

[lib]
name = "kestrel_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
# macos-private-api is required when tauri.macos.conf.json sets macOSPrivateApi.
# The feature is inert on Windows/Linux (cfg-gated inside tauri).
tauri = { version = "2.11.5", features = ["macos-private-api"] }
url = "2"
